@@ -1745,8 +1745,8 @@ public class ColonyAlertsNotification extends AbstractEHRNotification
     {
         TableSelector ts = new TableSelector(getEHRSchema(c, u).getTable("protocolGroupsOverlapping"));
         Map<String, List<Aggregate.Result>> results = ts.getAggregates(Arrays.asList(new Aggregate(FieldKey.fromString("protocol"), Aggregate.BaseType.COUNT, null, true), new Aggregate(FieldKey.fromString("project"), Aggregate.BaseType.COUNT, null, true)));
-        Long totalProtocol = (Long)(results.get("protocol").get(0).getValue());
-        Long totalProject = (Long)(results.get("project").get(0).getValue());
+        Long totalProtocol = (Long)(results.get("protocol").getFirst().getValue());
+        Long totalProject = (Long)(results.get("project").getFirst().getValue());
 
         if (totalProject > 0 || totalProtocol > 0)
         {
