@@ -37,13 +37,11 @@ import org.labkey.test.params.list.VarListDefinition;
 import org.labkey.test.tests.ehr.AbstractGenericEHRTest;
 import org.labkey.test.util.Ext4Helper;
 import org.labkey.test.util.LogMethod;
-import org.labkey.test.util.PasswordUtil;
 import org.labkey.test.util.SchemaHelper;
 import org.labkey.test.util.SqlserverOnlyTest;
 import org.labkey.test.util.ehr.EHRClientAPIHelper;
 import org.labkey.test.util.ext4cmp.Ext4CmpRef;
 import org.labkey.test.util.ext4cmp.Ext4ComboRef;
-import org.labkey.test.util.ext4cmp.Ext4FieldRef;
 import org.labkey.test.util.ext4cmp.Ext4GridRef;
 
 import java.io.File;
@@ -305,20 +303,6 @@ public abstract class AbstractGenericONPRC_EHRTest extends AbstractGenericEHRTes
         goToProjectHome();
     }
 
-    protected void setupNotificationService()
-    {
-        //set general settings
-        beginAt(WebTestHelper.buildURL("ldk", getContainerPath(),"notificationAdmin"));
-        _helper.waitForCmp("field[fieldLabel='Notification User']");
-        Ext4FieldRef.getForLabel(this, "Notification User").setValue(PasswordUtil.getUsername());
-        Ext4FieldRef.getForLabel(this, "Reply Email").setValue("fakeEmail@fakeDomain.test");
-        Ext4CmpRef btn = _ext4Helper.queryOne("button[text='Save']", Ext4CmpRef.class);
-        btn.waitForEnabled();
-        waitAndClick(Ext4Helper.Locators.ext4Button("Save"));
-        waitForElement(Ext4Helper.Locators.window("Success"));
-        waitAndClickAndWait(Ext4Helper.Locators.ext4Button("OK"));
-    }
-
     @Override
     protected void populateInitialData()
     {
@@ -397,7 +381,7 @@ public abstract class AbstractGenericONPRC_EHRTest extends AbstractGenericEHRTes
         select1.addFilter(new Filter("datedisabled", null, Filter.Operator.ISBLANK));
         SelectRowsResponse resp = select1.execute(getApiHelper().getConnection(), getContainerPath());
 
-        String objectid = resp.getRowCount().intValue() == 0 ? null : (String)resp.getRows().get(0).get("objectid");
+        String objectid = resp.getRowCount().intValue() == 0 ? null : (String)resp.getRows().getFirst().get("objectid");
         if (objectid == null)
         {
             InsertRowsCommand insertRowsCommand = new InsertRowsCommand("ehr_lookups", "flag_values");
@@ -412,7 +396,7 @@ public abstract class AbstractGenericONPRC_EHRTest extends AbstractGenericEHRTes
             });
 
             RowsResponse saveRowsResponse = insertRowsCommand.execute(getApiHelper().getConnection(), getContainerPath());
-            objectid = (String)saveRowsResponse.getRows().get(0).get("objectid");
+            objectid = (String)saveRowsResponse.getRows().getFirst().get("objectid");
         }
 
         return objectid;
@@ -450,7 +434,7 @@ public abstract class AbstractGenericONPRC_EHRTest extends AbstractGenericEHRTes
         SelectRowsCommand select1 = new SelectRowsCommand("ehr", "animal_groups");
         select1.addFilter(new Filter("name", name, Filter.Operator.EQUAL));
         SelectRowsResponse resp = select1.execute(getApiHelper().getConnection(), getContainerPath());
-        Integer groupId = resp.getRowCount().intValue() == 0 ? null : (Integer)resp.getRows().get(0).get("rowid");
+        Integer groupId = resp.getRowCount().intValue() == 0 ? null : (Integer)resp.getRows().getFirst().get("rowid");
         if (groupId == null)
         {
             InsertRowsCommand insertRowsCommand = new InsertRowsCommand("ehr", "animal_groups");
@@ -462,7 +446,7 @@ public abstract class AbstractGenericONPRC_EHRTest extends AbstractGenericEHRTes
             });
 
             RowsResponse saveRowsResponse = insertRowsCommand.execute(getApiHelper().getConnection(), getContainerPath());
-            groupId = (Integer)saveRowsResponse.getRows().get(0).get("rowid");
+            groupId = (Integer)saveRowsResponse.getRows().getFirst().get("rowid");
         }
 
         return groupId;
@@ -498,7 +482,7 @@ public abstract class AbstractGenericONPRC_EHRTest extends AbstractGenericEHRTes
         select1.addFilter(new Filter("value", name, Filter.Operator.EQUAL));
         SelectRowsResponse resp = select1.execute(getApiHelper().getConnection(), getContainerPath());
 
-        String objectid = resp.getRowCount().intValue() == 0 ? null : (String)resp.getRows().get(0).get("objectid");
+        String objectid = resp.getRowCount().intValue() == 0 ? null : (String)resp.getRows().getFirst().get("objectid");
         if (objectid == null)
         {
             InsertRowsCommand insertRowsCommand = new InsertRowsCommand("ehr_lookups", "flag_values");
@@ -512,7 +496,7 @@ public abstract class AbstractGenericONPRC_EHRTest extends AbstractGenericEHRTes
             });
 
             RowsResponse saveRowsResponse = insertRowsCommand.execute(getApiHelper().getConnection(), getContainerPath());
-            objectid = (String)saveRowsResponse.getRows().get(0).get("objectid");
+            objectid = (String)saveRowsResponse.getRows().getFirst().get("objectid");
         }
 
         return objectid;
